manifests/01-calico-policies/tier-application/01-app-allow-frontend-to-productcatalog.yaml
# Allows only frontend pods to access productcatalogservice (microsegmentation example).
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-frontend-to-productcatalog
  annotations:
    tier:: application
spec:
  selector: app == 'frontend'
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'productcatalogservice'
        ports: [3550]
  types:
    - Egress
