manifests/01-calico-policies/tier-application/02-app-allow-loadgen-to-frontend.yaml
# Allows only loadgenerator pods to access frontend service.
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-loadgen-to-frontend
  annotations:
    tigera.io/tier: application
spec:
  selector: app == 'loadgenerator'
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'frontend'
        ports: [8080]
  types:
    - Egress
