manifests/01-calico-policies/tier-application/03-app-allow-payment-egress-github.yaml
# Allows paymentservice pods to reach github.com:443 (shows FQDN egress; can change to any public domain for demo).
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-payment-egress-github
  annotations:
    tier:: application
spec:
  selector: app == 'paymentservice'
  egress:
    - action: Allow
      protocol: TCP
      destination:
        domains: ["github.com"]
        ports: [443]
  types:
    - Egress
