manifests/01-calico-policies/tier-application/04-app-block-paymentservice-from-redis.yaml
# Deny paymentservice pods from accessing redis-cart (negative microseg test).
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: block-paymentservice-from-redis
  annotations:
    tigera.io/tier: application
spec:
  selector: app == 'paymentservice'
  egress:
    - action: Deny
      protocol: TCP
      destination:
        selector: app == 'redis-cart'
        ports: [6379]
  types:
    - Egress
